# analytics

./: README.md
backend/api/: pyproject.toml
backend/api/app/: main.py
backend/api/app/api/v2/: v2_routes.py
backend/api/app/config/: template_registry.py
backend/api/app/models/: models.py  v2.py
frontend/src/components/charts/: QtypesChart.tsx  RCodeChart.tsx  SubdomainEntropyHistogramChart.tsx  TopDomainsChart.tsx  TopDomainsChart_v1.tsx  TopQnamesChart.tsx
frontend/src/components/charts/v2/: TopDomainsChart.tsx
frontend/src/components/layout/: DashboardHeader.tsx  KPIGridChart.tsx
frontend/src/pages/: Dashboard.tsx  QnameEntropyHistogram.tsx
frontend/src/utils/: analytics.ts
