[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Herbert Maosa <hmaosa@irontrustconsulting.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
boto3 = "^1.42.9"
jinja2 = "^3.1.6"
dotenv = "^0.9.9"
pyarrow = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
